--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -6,3 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
